# eaproto

./: .gitignore  CMakeLists.txt  README.md  carbin_deps.txt  package-lock.json
carbin/carbin/: carbin.cmake
carbin/carbin/pkg/protocolbuffers__protobuf/install/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-targets-release.cmake  protobuf-targets.cmake
carbin/carbin/pkg/protocolbuffers__protobuf/install/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
carbin/include/google/protobuf/: any.h  any.pb.h  any.proto  api.pb.h  api.proto  arena.h  arena_impl.h  arenastring.h  descriptor.h  descriptor.pb.h  descriptor.proto  descriptor_database.h  duration.pb.h  duration.proto  dynamic_message.h  empty.pb.h  empty.proto  extension_set.h  extension_set_inl.h  field_access_listener.h  field_mask.pb.h  field_mask.proto  generated_enum_reflection.h  generated_enum_util.h  generated_message_bases.h  generated_message_reflection.h  generated_message_table_driven.h  generated_message_tctable_decl.h  generated_message_tctable_impl.h  generated_message_tctable_impl.inc  generated_message_util.h  has_bits.h  implicit_weak_message.h  inlined_string_field.h  map.h  map_entry.h  map_entry_lite.h  map_field.h  map_field_inl.h  map_field_lite.h  (+28 more)
carbin/include/google/protobuf/compiler/: code_generator.h  command_line_interface.h  importer.h  parser.h  plugin.h  plugin.pb.h  plugin.proto
carbin/include/google/protobuf/compiler/cpp/: cpp_generator.h
carbin/include/google/protobuf/compiler/csharp/: csharp_generator.h  csharp_names.h
carbin/include/google/protobuf/compiler/java/: java_generator.h  java_kotlin_generator.h  java_names.h
carbin/include/google/protobuf/compiler/js/: js_generator.h  well_known_types_embed.h
carbin/include/google/protobuf/compiler/objectivec/: objectivec_generator.h  objectivec_helpers.h
carbin/include/google/protobuf/compiler/php/: php_generator.h
carbin/include/google/protobuf/compiler/python/: python_generator.h
carbin/include/google/protobuf/compiler/ruby/: ruby_generator.h
carbin/include/google/protobuf/io/: coded_stream.h  gzip_stream.h  io_win32.h  printer.h  strtod.h  tokenizer.h  zero_copy_stream.h  zero_copy_stream_impl.h  zero_copy_stream_impl_lite.h
carbin/include/google/protobuf/stubs/: bytestream.h  callback.h  casts.h  common.h  hash.h  logging.h  macros.h  map_util.h  mutex.h  once.h  platform_macros.h  port.h  status.h  stl_util.h  stringpiece.h  strutil.h  template_util.h
carbin/include/google/protobuf/util/: delimited_message_util.h  field_comparator.h  field_mask_util.h  json_util.h  message_differencer.h  time_util.h  type_resolver.h  type_resolver_util.h
carbin/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-config.cmake  protobuf-module.cmake  protobuf-options.cmake  protobuf-targets-release.cmake  protobuf-targets.cmake
carbin/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
eaproto/common/: error_code.proto  optype.proto  primitive.proto  version.proto
eaproto/db/: binlog.proto  common.proto  console.proto  expr.proto  fc.proto  meta.interface.proto  meta.struct.proto  olap.proto  optype.proto  plan.proto  raft.proto  reverse.proto  router.interface.proto  statistics.proto  store.interface.proto  store.struct.proto  test_decode.proto
eaproto/discovery/: discovery.interface.proto  discovery.struct.proto  error_code.proto  optype.proto
eaproto/exec/: plan.proto
eaproto/file_service/: file_service.proto
eaproto/meta/: cluster.struct.proto  common.proto  config.struct.proto  expr.proto  meta.interface.proto  meta.struct.proto  meta_struct.proto  op_type.proto  schema.struct.proto  servlet.struct.proto  statistics.proto  tso.struct.proto  unique_id.proto  user.struct.proto
eaproto/ops/: config.restful.proto  config.struct.proto  config_struct.proto  dict.restful.proto  dict.struct.proto  dict_struct.proto  discovery.struct.proto  discovery_struct.proto  file_struct.proto  idc.struct.proto  ops.interface.proto  ops.struct.proto  plugin_struct.proto
eaproto/qu/operator/: normalize.proto
eaproto/raft/: raft.proto
eaproto/router/: router.interface.proto
eaproto/service/: config_struct.proto  file_service.proto  plugin_service.proto  plugin_struct.proto  raft.proto  service.proto
eaproto/servlet/: optype.proto  servlet.interface.proto  servlet.struct.proto
